--- a/index.html
+++ b/index.html
@@ -1,12 +1,90 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+</head>
+<body>
+  <header class="main-header">
+    <nav class="main-navigotion">
+      <a class="main-header-logp">
+        <img src="#" width="#" height="#" alt="Логотип СЕДОНА">
+      </a>
+      <ul class="site-navigation">
+        <li>
+          <a href="#"> Информация </a>
+        </li>
+        <li>
+          <a href="#"> Фото и Видео</a>
+        </li>
+        <li>
+          <a href="#"> Карта штата </a>
+        </li>
+        <li>
+          <a href="#"> Гостиницы </a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-  </body>
+  <main class="container">
+    <h1 class="visually"> Седона - небольшой городок в Аризоне, заслуживающий большего </h1>
+    <section class="features">
+      <h2 class="visually-features">Рассмотрим пять причин, по которым Седона круче, чем Гранд Каньон!</h2>
+
+      <ul class="features-list">
+
+        <li class="feature-item">
+          <h3> Настоящий городок</h3>
+          <p>
+            №1
+          </p>
+          <p>
+            Седона не атракцион для туристов, там течет своя жизнь
+          </p>
+        </li>
+        <li class="feature-item">
+          <h3> Там есть мост дьявола</h3>
+          <p>
+            №2
+          </p>
+          <p>
+            Да, по нему можно пройти! Если конечно вы осмелитесь
+          </p>
+        </li>
+        <li class="feature-item">
+          <h3> Небольшая площадь </h3>
+          <p>
+            №3
+          </p>
+          <p>
+            Все достопримичательности находятся очень близко
+          </p>
+        </li>
+          <li class="feature-item">
+            <h3> Красивая дорога</h3>
+            <p>
+              №4
+            </p>
+            <p>
+              Ехать в седону из Лас-Вегаса совсем не скучно!
+            </p>
+          </li>
+            <li class="feature-item">
+              <h3> Мало туристов</h3>
+              <p>
+                №5
+              </p>
+              <p>
+                Большинство едет в Гранд Каньон и толпится там
+              </p>
+            </li>
+      </ul>
+    </section>
+
+  </main>
+
+
+</body>
 </html>
