--- a/index.html
+++ b/index.html
@@ -82,6 +82,29 @@
             </li>
       </ul>
     </section>
+    <section class="recommendations">
+      <h2 class="visually-hidden"> Наши рекомендации</h2>
+      <ul class="recommendations-list">
+        <li class="recommendations-list-item">
+          <h3> Жилье</h3>
+          <p>
+            Рекомендуем пожить в настоящем мотеле, все как в кино!
+          </p>
+        </li>
+        <li class="recommendations-list-item">
+          <h3> Еда</h3>
+          <p>
+            Всегда заказывайте фирменный бургер, вы не разочаруетесь!
+          </p>
+        </li>
+          <li class="recommendations-list-item">
+            <h3> Сувениры </h3>
+            <p>
+              Не только китайского, но и местного производства!
+            </p>
+          </li>
+      </ul>
+    </section>
 
   </main>
 
