--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
         <li class="feature-item">
           <h3> Настоящий городок</h3>
+          <img src="#" width="#" height="#" alt="Фотография города">
           <p>
             №1
           </p>
@@ -46,6 +47,7 @@
         </li>
         <li class="feature-item">
           <h3> Там есть мост дьявола</h3>
+            <img src="#" width="#" height="#" alt="Фотография моста">
           <p>
             №2
           </p>
@@ -105,9 +107,34 @@
           </li>
       </ul>
     </section>
-
+    <section class="booking">
+      <h2> Заинтересовались?</h2>
+      <p class="booking-info">
+        Укажите предпологаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне.
+      </p>
+      <!-- Здесь будет форма -->
+    </section>
   </main>
-
-
+  <footer class="main-footer">
+    <div class="footer-hashtag">
+      #VISITSEDONA
+    </div>
+    <div class="footer-social">
+      <ul>
+        <li>
+          <a class="social-button" href="#">Вконтакте</a>
+        </li>
+        <li>
+          <a class="social-button" href="#">Фейсбук</a>
+        </li>
+        <li>
+          <a class="social-button" href="#">Инстаграм</a>
+        </li>
+      </ul>
+    </div>
+    <p class="footer-copyright">
+      <a href="https://htmlacademy.ru"> HTML Academy</a>
+    </p>
+  </footer>
 </body>
 </html>
