Добавляет исправления главной страницы

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
 </head>
+
 <body>
   <header class="main-header">
-    <nav class="main-navigotion">
-      <a class="main-header-logp">
+    <nav class="main-navigation">
+      <a class="main-header-logo" href="index.html">
         <img src="#" width="#" height="#" alt="Логотип СЕДОНА">
       </a>
       <ul class="site-navigation">
@@ -47,7 +48,7 @@
         </li>
         <li class="feature-item">
           <h3> Там есть мост дьявола</h3>
-            <img src="#" width="#" height="#" alt="Фотография моста">
+          <img src="#" width="#" height="#" alt="Фотография моста">
           <p>
             №2
           </p>
@@ -64,24 +65,24 @@
             Все достопримичательности находятся очень близко
           </p>
         </li>
-          <li class="feature-item">
-            <h3> Красивая дорога</h3>
-            <p>
-              №4
-            </p>
-            <p>
-              Ехать в седону из Лас-Вегаса совсем не скучно!
-            </p>
-          </li>
-            <li class="feature-item">
-              <h3> Мало туристов</h3>
-              <p>
-                №5
-              </p>
-              <p>
-                Большинство едет в Гранд Каньон и толпится там
-              </p>
-            </li>
+        <li class="feature-item">
+          <h3> Красивая дорога</h3>
+          <p>
+            №4
+          </p>
+          <p>
+            Ехать в седону из Лас-Вегаса совсем не скучно!
+          </p>
+        </li>
+        <li class="feature-item">
+          <h3> Мало туристов</h3>
+          <p>
+            №5
+          </p>
+          <p>
+            Большинство едет в Гранд Каньон и толпится там
+          </p>
+        </li>
       </ul>
     </section>
     <section class="recommendations">
@@ -99,12 +100,12 @@
             Всегда заказывайте фирменный бургер, вы не разочаруетесь!
           </p>
         </li>
-          <li class="recommendations-list-item">
-            <h3> Сувениры </h3>
-            <p>
-              Не только китайского, но и местного производства!
-            </p>
-          </li>
+        <li class="recommendations-list-item">
+          <h3> Сувениры </h3>
+          <p>
+            Не только китайского, но и местного производства!
+          </p>
+        </li>
       </ul>
     </section>
     <section class="booking">
@@ -122,19 +123,20 @@
     <div class="footer-social">
       <ul>
         <li>
-          <a class="social-button" href="#">Вконтакте</a>
+          <a class="social-button" href="#">Twitter</a>
         </li>
         <li>
           <a class="social-button" href="#">Фейсбук</a>
         </li>
         <li>
-          <a class="social-button" href="#">Инстаграм</a>
+          <a class="social-button" href="#">Youtube</a>
         </li>
       </ul>
     </div>
     <p class="footer-copyright">
-      <a href="https://htmlacademy.ru"> HTML Academy</a>
+      <a href="https://up.htmlacademy.ru/htmlcss/22"> Разработано HTML Academy</a>
     </p>
   </footer>
 </body>
+
 </html>
