--- a/index.html
+++ b/index.html
@@ -9,35 +9,36 @@
 <body>
   <header class="main-header">
     <nav class="main-navigation">
-      <a class="main-header-logo" href="index.html">
+      <a class="main-header-logo">
         <img src="#" width="#" height="#" alt="Логотип СЕДОНА">
       </a>
       <ul class="site-navigation">
         <li>
-          <a href="#"> Информация </a>
+          <a href="#">Информация</a>
         </li>
         <li>
-          <a href="#"> Фото и Видео</a>
+          <a href="#">Фото и Видео</a>
         </li>
         <li>
-          <a href="#"> Карта штата </a>
+          <a href="#">Карта штата</a>
         </li>
         <li>
-          <a href="#"> Гостиницы </a>
+          <a href="catalog/html">Гостиницы</a>
         </li>
       </ul>
     </nav>
   </header>
 
   <main class="container">
-    <h1 class="visually"> Седона - небольшой городок в Аризоне, заслуживающий большего </h1>
+    <h1 class="visually">Седона - небольшой городок в Аризоне, заслуживающий большего</h1>
+    <img src="#" width="#" height="#" alt="Welcome to  the gorgeous Sedona!">
     <section class="features">
       <h2 class="visually-features">Рассмотрим пять причин, по которым Седона круче, чем Гранд Каньон!</h2>
 
       <ul class="features-list">
 
-        <li class="feature-item">
-          <h3> Настоящий городок</h3>
+        <li class="features-item">
+          <h3>Настоящий городок</h3>
           <img src="#" width="#" height="#" alt="Фотография города">
           <p>
             №1
@@ -45,9 +46,29 @@
           <p>
             Седона не атракцион для туристов, там течет своя жизнь
           </p>
+          <ul class="features-item-recommendations">
+            <li class="item-recommendations">
+              <h4>Жилье</h4>
+              <p>
+                Рекомендуем пожить в настоящем мотеле, все как в кино!
+              </p>
+            </li>
+            <li class="item-recommendations">
+              <h4>Еда</h4>
+              <p>
+                Всегда заказывайте фирменный бургер, вы не разочаруетесь!
+              </p>
+            </li>
+            <li class="item-recommendations">
+              <h4>Сувениры</h4>
+              <p>
+                Не только китайского, но и местного производства!
+              </p>
+            </li>
+          </ul>
         </li>
-        <li class="feature-item">
-          <h3> Там есть мост дьявола</h3>
+        <li class="features-item">
+          <h3>Там есть мост дьявола</h3>
           <img src="#" width="#" height="#" alt="Фотография моста">
           <p>
             №2
@@ -56,8 +77,8 @@
             Да, по нему можно пройти! Если конечно вы осмелитесь
           </p>
         </li>
-        <li class="feature-item">
-          <h3> Небольшая площадь </h3>
+        <li class="features-item">
+          <h3>Небольшая площадь</h3>
           <p>
             №3
           </p>
@@ -65,17 +86,17 @@
             Все достопримичательности находятся очень близко
           </p>
         </li>
-        <li class="feature-item">
-          <h3> Красивая дорога</h3>
+        <li class="features-item">
+          <h3>Красивая дорога</h3>
           <p>
             №4
           </p>
           <p>
-            Ехать в седону из Лас-Вегаса совсем не скучно!
+            Ехать в Седону из Лас-Вегаса совсем не скучно!
           </p>
         </li>
-        <li class="feature-item">
-          <h3> Мало туристов</h3>
+        <li class="features-item">
+          <h3>Мало туристов</h3>
           <p>
             №5
           </p>
@@ -85,31 +106,8 @@
         </li>
       </ul>
     </section>
-    <section class="recommendations">
-      <h2 class="visually-hidden"> Наши рекомендации</h2>
-      <ul class="recommendations-list">
-        <li class="recommendations-list-item">
-          <h3> Жилье</h3>
-          <p>
-            Рекомендуем пожить в настоящем мотеле, все как в кино!
-          </p>
-        </li>
-        <li class="recommendations-list-item">
-          <h3> Еда</h3>
-          <p>
-            Всегда заказывайте фирменный бургер, вы не разочаруетесь!
-          </p>
-        </li>
-        <li class="recommendations-list-item">
-          <h3> Сувениры </h3>
-          <p>
-            Не только китайского, но и местного производства!
-          </p>
-        </li>
-      </ul>
-    </section>
     <section class="booking">
-      <h2> Заинтересовались?</h2>
+      <h2>Заинтересовались?</h2>
       <p class="booking-info">
         Укажите предпологаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне.
       </p>
