Добавляет контентные изображния

--- a/catalog.html
+++ b/catalog.html
@@ -48,7 +48,7 @@
           </h3>
           <p class="catalog-item-image">
             <a href="catalog-item.html">
-                <img src="img/hotel-1.jpg" alt="Гостиница Amara Resort & Spa" width="#" height="#">
+                <img src="img/1-hotel.jpg" alt="Гостиница Amara Resort & Spa" width="135" height="90">
               </a>
           </p>
           <p>
@@ -69,7 +69,7 @@
           </h3>
           <p class="catalog-item-image">
             <a href="catalog-item.html">
-                <img src="img/hotel-2.jpg" alt="Мотель Desert Quail Inn" width="#" height="#">
+                <img src="img/2-hotel.jpg" alt="Мотель Desert Quail Inn" width="135" height="90">
               </a>
           </p>
           <p>
@@ -90,7 +90,7 @@
           </h3>
           <p class="catalog-item-image">
             <a href="catalog-item.html">
-                <img src="img/hotel-3.jpg" alt="Апартаменты Villas At Poco Diablo " width="#" height="#">
+                <img src="img/3-hotel.jpg" alt="Апартаменты Villas At Poco Diablo " width="135" height="90">
               </a>
           </p>
           <p>
