--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <li class="features-item">
           <h3>Настоящий городок</h3>
-          <img src="#" width="#" height="#" alt="Фотография города">
+          <img src="img/1-pic.jpg" width="800" height="401" alt="Фотография города">
           <p>
             №1
           </p>
@@ -69,7 +69,7 @@
         </li>
         <li class="features-item">
           <h3>Там есть мост дьявола</h3>
-          <img src="#" width="#" height="#" alt="Фотография моста">
+          <img src="img/2-pic.jpg" width="800" height="400" alt="Фотография моста">
           <p>
             №2
           </p>
