--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo" href="index.html">
-        <img src="#" width="#" height="#" alt="Логотип СЕДОНА">
+        <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип СЕДОНА">
       </a>
       <ul class="site-navigation">
         <li>
