--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo">
-        <img src="#" width="#" height="#" alt="Логотип СЕДОНА">
+        <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип СЕДОНА">
       </a>
       <ul class="site-navigation">
         <li>
@@ -23,7 +23,7 @@
           <a href="#">Карта штата</a>
         </li>
         <li>
-          <a href="catalog/html">Гостиницы</a>
+          <a href="catalog.html">Гостиницы</a>
         </li>
       </ul>
     </nav>
@@ -31,7 +31,7 @@
 
   <main class="container">
     <h1 class="visually">Седона - небольшой городок в Аризоне, заслуживающий большего</h1>
-    <img src="#" width="#" height="#" alt="Welcome to  the gorgeous Sedona!">
+    <img src="img/welcome-sedona.png" width="459" height="353" alt="Welcome to  the gorgeous Sedona!">
     <section class="features">
       <h2 class="visually-features">Рассмотрим пять причин, по которым Седона круче, чем Гранд Каньон!</h2>
 
