Добавляет исправления орфографии тегов

--- a/index.html
+++ b/index.html
@@ -129,16 +129,16 @@
         </p>
         <p class="appointment-item">
           <label>Взрослые:
-            <botton class="btn-minus-icon" type="botton"></botton>
+            <button class="btn-minus-icon" type="botton"></button>
             <input type="text" name="adults" value="" placeholder="2">
-            <botton class="btn-plus-icon" type="botton"></botton>
+            <button class="btn-plus-icon" type="botton"></button>
           </label>
         </p>
         <p class="appointment-item">
           <label>Дети:
-            <botton class="btn-minus-icon" type="botton"></botton>
+            <button class="btn-minus-icon" type="botton"></button>
             <input type="text" name="children" value="" placeholder="0">
-            <botton class="btn-plus-icon" type="botton"></botton>
+            <button class="btn-plus-icon" type="botton"></button>
           </label>
         </p>
         <button class="button" type="submit">Найти </button>
