Добавляет базовое оформление

--- a/index.html
+++ b/index.html
@@ -113,11 +113,15 @@
       </ul>
     </section>
     <section class="booking">
+
+      <div class="search">
+
       <h2>Заинтересовались?</h2>
       <p class="booking-info">
         Укажите предпологаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне.
       </p>
       <button type="button" class="button-search"> ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
+      </div>
 
 
       <div class="search form">
