--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body class="catalog-page">
+<body class= "catalog-page">
   <div class="general-background">
   <header class="main-header">
     <nav class="main-navigation">
@@ -27,12 +27,14 @@
           <a href="#">Карта штата</a>
         </li>
         <li class="site-navigation-current">
-          <a>Гостиницы</a>
+          <a class="current">Гостиницы</a>
         </li>
       </ul>
     </nav>
   </header>
   <main class="container">
+
+    <div class="promo-catalog">
     <section class="filters">
       <h2 class="visually-hidden">Фильтр гостиниц</h2>
 
@@ -127,6 +129,7 @@
         <button type="submit" class="filter-button"> Показать </button>
       </form>
     </section>
+  </div>
 
     <section class="sorting">
       <div class="sorting-results-left">
