Добавляет исправления оформления

--- a/catalog.html
+++ b/catalog.html
@@ -175,7 +175,7 @@
             Гостиница
           </p>
           <p class="price-type">
-            <b> От 4000 ₽.</b>
+             От 4000 ₽.
           </p>
           <a class="detail" href="#">Подробнее</a>
           <a class="button" href="#">Забронировать</a>
@@ -196,7 +196,7 @@
             Мотель
           </p>
           <p class="price-type">
-            <b> От 3000 ₽.</b>
+             От 3000 ₽.
           </p>
           <a class="detail" href="#">Подробнее</a>
           <a class="button" href="#">Забронировать</a>
@@ -217,7 +217,7 @@
             Апартаменты
           </p>
           <p class="price-type">
-            <b> От 2000 ₽.</b>
+             От 2000 ₽.
           </p>
           <a class="detail" href="#">Подробнее</a>
           <a class="button" href="#">Забронировать</a>
@@ -245,9 +245,12 @@
         </li>
       </ul>
     </div>
-    <p class="footer-copyright">
+    <div class="footer-copyright">
+      <p>
+        Website by
+      </p>
       <a href="https://up.htmlacademy.ru/htmlcss/22"><span class="visually-hidden">Разработано HTML Academy</span></a>
-    </p>
+    </div>
   </footer>
   </div>
 </body>
