--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
         <p class="appointment-item">
           <label for="appointment-form-arrival" class="please">Дата заезда:</label>
-            <input class="input-field" type="text" name="arrival" value="" placeholder="24 АПРЕЛЯ 2017" id="appointment-form-arrival">
+            <input class="input-field" type="text" name="arrival" value="" placeholder="24 апреля 2017" id="appointment-form-arrival">
             <button class="icon-calendar" type="button">
               <span class="visually-hidden"> Выберите даты заезда </span>
                 <!--  Тут будет СВГ иконка, просто скопировать не получилось -->
@@ -136,7 +136,7 @@
         </p>
         <p class="appointment-item">
           <label for="appointment-form-departure" class="please">Дата выезда:</label>
-            <input class="input-field" type="text" name="departure" value="" placeholder="4 ИЮЛЯ 2017" id="appointment-form-departure">
+            <input class="input-field" type="text" name="departure" value="" placeholder="4 июля 2017" id="appointment-form-departure">
             <button class="icon-calendar" type="button">
               <span class="visually-hidden"> Выберите даты выезда </span>
                 <!--  Тут будет СВГ иконка, просто скопировать не получилось -->
@@ -186,9 +186,12 @@
         </li>
       </ul>
     </div>
-    <p class="footer-copyright">
-      <a class="copyright-button" href="https://up.htmlacademy.ru/htmlcss/22"> <span class="visually-hidden">Разработано HTML Academy</span></a>
-    </p>
+    <div class="footer-copyright">
+      <p>
+        Website by
+      </p>
+      <a href="https://up.htmlacademy.ru/htmlcss/22"><span class="visually-hidden">Разработано HTML Academy</span></a>
+    </div>
   </footer>
 </div>
 </body>
